[workspace]
members = ["raylib", "raylib-sys"]
exclude = ["examples"]

[workspace.package]
version = "6.3.0-dev"
authors = ["Brett Chalupa <brett@brettchalupa.com>", "raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
license = "Zlib"
repository = "https://github.com/brettchalupa/sola-raylib"
edition = "2018"

[workspace.dependencies]
raylib-sys = { package = "sola-raylib-sys", version = "6.3.0-dev", path = "raylib-sys" }

[workspace.lints.rust]
# Workspace lints apply only to our own crates, never to dependencies.
warnings = "deny"

[workspace.lints.clippy]
# The default clippy group (correctness, suspicious, style, complexity, perf).
# Priority lets more-specific lints below (or per-crate/per-item) override.
all = { level = "deny", priority = -1 }
