[package]
name = "sola-raylib-examples"
authors = ["Brett Chalupa <brett@brettchalupa.com>", "raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
edition = "2021"
license = "Zlib"
readme = "../README.md"
repository = "https://github.com/brettchalupa/sola-raylib"

[dependencies]
raylib = { package = "sola-raylib", path = "../raylib" }
structopt = "0.3"
rand = "0.10"
ringbuf = {version = "0.4.7", optional = true}

[features]
ringbuf = ["dep:ringbuf"]
sdl = ["raylib/sdl"]
software_render = ["raylib/software_render"]
platform_memory = ["raylib/platform_memory"]
platform_web_rgfw = ["raylib/platform_web_rgfw"]
noscreenshot = ["raylib/noscreenshot"]

[[bin]]
name = "rgui"
path = "./rgui.rs"

[[bin]]
name = "arkanoid"
path = "./arkanoid.rs"

[[bin]]
name = "logo"
path = "./logo.rs"

[[bin]]
name = "camera_2d"
path = "./camera_2d.rs"

[[bin]]
name = "raymarch"
path = "./raymarch.rs"

[[bin]]
name = "font"
path = "./font.rs"

[[bin]]
name = "drop"
path = "./drop.rs"

[[bin]]
name = "texture"
path = "./texture.rs"


[[bin]]
name = "yaw_pitch_roll"
path = "yaw_pitch_roll.rs"

[[bin]]
name = "input"
path = "input.rs"

[[bin]]
name = "3d_camera_first_person"
path = "3d_camera_first_person.rs"

[[bin]]
name = "model_shader"
path = "model_shader.rs"

[[bin]]
name = "extensions"
path = "extensions.rs"

[[bin]]
name = "asteroids"
path = "./asteroids.rs"

[[bin]]
name = "floppy"
path = "./floppy.rs"

[[bin]]
name = "shader_multisample"
path = "./shader_multisample.rs"

[[bin]]
name = "music_effects"
path = "music_effects.rs"
required-features = ["ringbuf"]

[[bin]]
name = "hello_raylib"
path = "hello_raylib.rs"

[[bin]]
name = "animation_blending"
path = "animation_blending.rs"

[[bin]]
name = "shapes_new"
path = "shapes_new.rs"

[[bin]]
name = "pixel_color"
path = "pixel_color.rs"

[[bin]]
name = "borderless_fullscreen"
path = "borderless_fullscreen.rs"

# examples is excluded from the workspace, so we declare lints locally
# (matching the workspace `[workspace.lints]` in the repo root Cargo.toml).
[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
