[package]
name = "sola-raylib-sys"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Raw FFI bindings for raylib. sola-raylib-sys N.x tracks raylib N.x (e.g. 5.x → raylib 5.5; 6.x → raylib 6.0)."
documentation = "https://docs.rs/sola-raylib-sys"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
categories = ["external-ffi-bindings"]
exclude = ["raylib/examples/*", "raylib/projects/*", "raylib/templates/*"]

[build-dependencies]
cmake = "0.1.51"
cc = "1.0"
bindgen = "0.72"

[features]
# Build Raylib headless for docs/esoteric platforms. Up to you to link.
nobuild = []
# Generate bindings automatically.
# You can turn this off if you wanna go into the source and put in your own bindings.rs, which is
# useful since bindgen doesn't work on esoteric platforms.
bindgen = []
# Build for wayland on linux. Should fix #119
wayland = []
# Bindgen is default
default = ["bindgen"]

# OpenGL stuff, intended for fixing #122
opengl_33 = []
opengl_21 = []
# opengl_11 = [] I couldn't get this one working, the others were fine in my limited testing (unsure about wayland compatibility)
opengl_es_20 = []
opengl_es_30 = []
sdl = []

# Disable raylib's built-in F12 screenshot keybind. Implemented by
# pre-defining `SUPPORT_SCREEN_CAPTURE=0` directly on the C compiler line
# rather than via raylib's `CUSTOMIZE_BUILD` switch (which blanks out every
# other `SUPPORT_*` default and breaks rendering, see issue #40).
noscreenshot = []

# config.h's SUPPORT_CUSTOM_FRAME_CONTROL
custom_frame_control = []

# raylib 6.0 added a CPU software renderer (rlsw). This feature forces
# `OPENGL_VERSION=Software` so raylib compiles with the SW backend while
# still using the normal desktop platform (you get a window, rendered on
# the CPU). Useful for GPU-less environments (ESP32, low-end Linux).
software_render = []

# raylib 6.0 added a headless framebuffer platform (PLATFORM=Memory) that
# renders to memory with no window. Note that reading the framebuffer
# back out requires `rlsw.h` APIs (e.g. `swGetColorBuffer`) which are NOT
# yet exposed through our bindings — enable this feature if you want the
# backend compiled in, but a full headless capture example is still
# post-release work.
platform_memory = []

# raylib 6.0 added an RGFW-based web backend alongside the default
# Emscripten/GLFW web path (`PLATFORM=WebRGFW`). Only meaningful when
# cross-compiling to `wasm32-unknown-emscripten`.
platform_web_rgfw = []

[lints]
workspace = true
