[package]
name = "sola-raylib"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "../README.md"
description = "Safe Rust bindings for raylib. sola-raylib N.x tracks raylib N.x (e.g. 5.x → raylib 5.5; 6.x → raylib 6.0)."
documentation = "https://docs.rs/sola-raylib"
keywords = ["bindings", "raylib", "gamedev"]
categories = ["api-bindings", "game-engines", "graphics"]
autoexamples = false

[dependencies]
raylib-sys = { workspace = true }
cfg-if = "1.0.0"
serde = { version = "1.0.125", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }

mint = { version = "0.5.9", optional = true }

thiserror = "2"

paste = "1.0"
seq-macro = "0.3.5"

[dev-dependencies]
structopt = "0.3"
rand = "0.10"

[features]
with_serde = ["serde", "serde_json"]
wayland = ["raylib-sys/wayland"]
convert_mint = ["mint"]
custom_frame_control = ["raylib-sys/custom_frame_control"]
opengl_33 = ["raylib-sys/opengl_33"]
opengl_21 = ["raylib-sys/opengl_21"]
opengl_es_20 = ["raylib-sys/opengl_es_20"]
opengl_es_30 = ["raylib-sys/opengl_es_30"]
sdl = ["raylib-sys/sdl"]
noscreenshot = ["raylib-sys/noscreenshot"]
software_render = ["raylib-sys/software_render"]
platform_memory = ["raylib-sys/platform_memory"]
platform_web_rgfw = ["raylib-sys/platform_web_rgfw"]
nobuild = ["raylib-sys/nobuild"]
bindgen = ["raylib-sys/bindgen"]
default = ["bindgen"]

[lints]
workspace = true
